--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,15 @@
   </parent>
 
   <dependencies>
-    <!-- MongoDB data-->
+    <!-- MongoDB data - maybe not required-->
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-mongodb</artifactId>
     </dependency>
-    <!--Spring boot dependencies-->
+    <!-- MongoDB spring boot (replaces JPA) -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
     <!--Testing with JUnit and Mockito provided with this dependency-->
     <dependency>
