modified log-in credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.data.mongodb.database=sample_notes
-spring.data.mongodb.uri=mongodb+srv://Admin:admin@example0.lxsu7.mongodb.net/sample_notes?retryWrites=true&w=majority
+# use a database user with read and write access rather than a atlas admin
+spring.data.mongodb.uri=mongodb+srv://RnW-1:readandwrite@example0.lxsu7.mongodb.net/sample_notes?retryWrites=true&w=majority
+
+# alternative lines to aid with authentication errors
+#spring.data.mongodb.authentication-database=admin
+#authSource=sample_notes
 
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8085
+server.port=8081
